--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,15 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="container-fluid text-center pt-5">
+      <div class="card mx-auto p-2" style="width: 18rem;">
+        <div class="topSuit"></div>
+        <div class="card-body">
+          <h5 class="rank"></h5>
+        </div>
+        <div class="bottomSuit"></div>
       </div>
+      <a class="btn btn-secondary btn-lg mt-5">Get a new card</a>
     </div>
   </body>
 </html>
